fix (Information Page): Change food table orientation to fit on mobile better

--- a/src/app/pages/Info.scss
+++ b/src/app/pages/Info.scss
@@ -32,23 +32,26 @@
 
 .table {
 	width: calc(100% - 1px);
+	max-width: calc(100% - 1px);
 	text-align: center;
 	border-collapse: collapse;
 	box-sizing: border-box;
-
+	
+	
 	& :first-child :first-child :first-child {
 		border-top-left-radius: 10px;	
 	}
-
+	
 	& :first-child :last-child :first-child {
 		border-bottom-left-radius: 10px;
 	}
-
+	
 	& td {
 		border: 1px solid darken($primary, 10);
 		padding: 5px 10px;
 		box-sizing: border-box;
-
+		font-size: 12px;
+		
 		&:hover {
 			background-color: darken(white, 5);
 		}
